# npc-agent-system

./: LICENSE  main.py  pyproject.toml  requirements.txt
backend/prompts/: tavern.txt
